tests/machine/x/pascal/left_join.error
line: 74
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/left_join.pas
left_join.pas(46,11) Error: Identifier not found "c"
left_join.pas(48,46) Error: Identifier not found "c"
left_join.pas(52,42) Error: Identifier not found "c"
left_join.pas(58,11) Error: Identifier not found "c"
left_join.pas(61,42) Error: Identifier not found "c"
left_join.pas(74) Fatal: There were 5 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

